--- a/css/s_124085_triad.css
+++ b/css/s_124085_triad.css
@@ -10,11 +10,11 @@ header {
   color: #89A0C2;
 }
 
-#homepage header, #philsciencepage header, #sciencepage header, #philosophypage header {
+#homepage header, .philsciencepage header, .sciencepage header, .philosophypage header {
   text-align: left;
 }
 
-#homepage header, #philsciencepage header {
+#homepage header, .philsciencepage header {
   height: 257px; /* height and width of Raphael_SchoolOfAthens.jpg*/
   width: 1521px;
   max-width: 75% /*62em*/;
@@ -23,7 +23,7 @@ header {
   background-position: left;
 }
 
-#sciencepage header {
+.sciencepage header {
   height: 247px; /* height and width of PeonyNebula.jpg*/
   width: 1598px;
   max-width: 75% /*62em*/;
@@ -32,7 +32,7 @@ header {
   background-position: left;
 }
 
-#philosophypage header {
+.philosophypage header {
   height: 247px; /* height and width of David_MortDeSocrate.jpg*/
   width: 1368px;
   max-width: 75% /*62em*/;
@@ -41,7 +41,7 @@ header {
   background-position: left;
 }
 
-#homepage h1, #philsciencepage h1, #philosophypage h1, #sciencepage h1 { 
+#homepage h1, .philsciencepage h1, .philosophypage h1, .sciencepage h1 { 
   font-size: 3.2em; letter-spacing: 1.3px; 
   padding: 20px 0 0 20px;
   margin: 0 0 0 0;
