new class: .website

--- a/css/righthand_fixed_navigation_layout.css
+++ b/css/righthand_fixed_navigation_layout.css
@@ -104,7 +104,7 @@ rp, rt {
   display: none;
 }
 
-.booktitle, .journal, .magazine, .newspaper {
+.booktitle, .journal, .magazine, .newspaper, .website {
   font-style: italic;
 }
 
