CSS for aside in fleck_ludwik.html.

--- a/css/righthand_fixed_navigation_layout.css
+++ b/css/righthand_fixed_navigation_layout.css
@@ -81,6 +81,10 @@ main a, footer a {
   padding-right: 2px; padding-left: 2px;
 }
 
+aside {
+  padding: 20px;
+}
+
 footer {
   margin-top: 60px;
   padding-left: 4px;
