--- a/css/s_124085_triad.css
+++ b/css/s_124085_triad.css
@@ -178,7 +178,7 @@ main ul > li {
   list-style-image: url('../img/orangebrown_listsquare.png');
 }
 
-#introquote {
+#introquote, .introquote {
   font-size: 1.1em;
   font-style: italic;
   width: 700px;
@@ -190,7 +190,7 @@ main ul > li {
   color: #222222;
   border: 0;
 }
-#introquote:before {
+#introquote:before, .introquote:before {
   display: block;
   content: "\201C";
   font-size: 80px;
