--- a/css/righthand_fixed_navigation_layout.css
+++ b/css/righthand_fixed_navigation_layout.css
@@ -115,7 +115,7 @@ rp, rt {
   display: none;
 }
 
-.booktitle, .journal, .proceedings, .conference, .editedvolume, .phdthesis, .magazine, .newspaper, .website, .blog {
+.booktitle, .journal, .proceedings, .conference, .editedvolume, .phdthesis, .magazine, .newspaper, .website, .blog, i.ytchannel {
   font-style: italic;
 }
 
