--- a/css/s_124085_triad.css
+++ b/css/s_124085_triad.css
@@ -1,5 +1,9 @@
 @import url("righthand_fixed_navigation_layout.css");
 
+p.site-moved-warning { border: 2px solid red; padding: 5px;
+  font-size: 1.5em;
+}
+
 body {
   font-family: 'Libre Baskerville', 'Trebuchet MS', Verdana, Helvetica, sans-serif;
   background-color: white; color: #282828;
